# BackupScripter

./: .gitignore  README.md  __main__.py  requirements.txt  setup.cfg
bs/: __init__.py  app.py  create.py  g.py  info.py  script_data.py
bs/elements/: __init__.py  detail_list.py  matching_groups_list.py  vfs_explorer_view.py
bs/fs/: __init__.py  matching_group.py  vfs.py  vfs_entry.py
bs/script/: app.py  archive.py  create.py  data.py  details.py  run.py  utils.py
bs/windows/: edit_matching_group.py  main.py  manage_included.py
data/project/: packfio_data.py  script_data.json
dev/: formatting.txt  todo.txt  tools.txt
gplib/: __init__.py  date_string.py  debug_utils.py  g.py  logging.py  utils.py
gplib/cmd/: utils.py
gplib/data/: multidict.py  packable_dict.py  utils.py
gplib/fs/: utils.py
gplib/misc/: _dirinfo.md  debug_utils.py  test.py  utils.py
gplib/project/: logging.py  utils.py
gplib/text/: utils.py
output/: README.md
output/scripts/: BackupMyPyApps.pyz  test_script.pyz
output/temp/: README.md
scriptlib/: packfio.py  script_data.py
scripts/: cmd_bs.py  cmd_here.py  create_shortcuts.py  run_backup.py  run_debug.py  run_editor.py  run_tests.py
src/bs/: __init__.py  app.py  create.py  g.py  info.py  script_data.py
src/bs/fs/: vfs.py  (+3 more)
src/gp/: __init__.py  date_string.py  debug_utils.py  logging.py  print_column.py  utils.py  vfs_explorer_view.py
temp/: README.md
tests/: __init__.py  driver.py  test_backup_settings.py  test_bs.py  test_core.py  test_general.py  test_large_scale.py  test_matching_groups.py  test_scriptlib.py
(+28 files in other folders)
