[metadata]
name = BackupScripter
version = 0.0.1
author_email = sethjkitchens@gmail.com
description = A Backup/Packing script editor
long_description = An editor that creates single-file scripts that package up a list of files and folders, with the ability to exclude nested items both manually and dynamically via sequentially executing rules for matching filename patterns and other conditions.
keywords = GUI, Scripting, Backup, Packing, Compression
license = None, All Rights Reserved
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    nssgui
install_requires =
    requests
    importlib-metadata
    PySimpleGUI